# justsearch

./: .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yaml  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINING.md  NON-GOALS.md  NOTICE  README.md  RESEARCH.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES  build.gradle.kts  gradle.lockfile  gradle.properties  package-lock.json  package.json  settings.gradle.kts
modules/shell/src-tauri/: .gitignore  Cargo.toml  rust-toolchain.toml  tauri.conf.json  tauri.signing.conf.json
scripts/jseval/: .gitignore  external-baselines.v1.json  gpu-monitor.ps1  leak-gate-baselines.v1.json  llm-gen-ratchet-baselines.v1.json  perf-ratchet-baselines.v1.json  pyproject.toml  release.v1.json  release.v1.schema.json  relevance-ratchet-baselines.v1.json  utility-comparison.v1.schema.json
scripts/jseval/.changesets/: README.md  leak-gate-mixed_legal-clerc-200-tempdoc666.md
scripts/jseval/635-corpora/: 635-self-demo-v1.suite-profile.v1.json
scripts/jseval/configs/: 334-arctic-m-v2-quality.yaml  334-gte-base-quality.yaml  334-gte-modernbert-quality.yaml  334-q4-quality-baseline.yaml  343-enronqa-baseline.yaml  343-enronqa-chunk-off.yaml  343-miracl-de-baseline.yaml  343-scifact-baseline.yaml  358-e5-multilingual-quality.yaml  358-gte-multilingual-quality.yaml
scripts/jseval/experiments/: regen_a11y_baseline.py  route_mock_home.py
scripts/jseval/jseval/: __init__.py  __main__.py  _paths.py  agent_manifest.py  agent_retrieval_eval.py  agent_utility_inspect.py  agent_utility_run.py  ann_proof.py  artifacts.py  backend.py  baseline_shift.py  bench_concurrency.py  bisection.py  calibrate.py  cli.py  cohort_baselines.py  comparability.py  compare_runs.py  context_coverage.py  corpora.py  corpus_build.py  corpus_certify.py  corpus_fetch.py  corpus_fidelity.py  corpus_generate.py  corpus_identity.py  correction_probe.py  counterfactual.py  diff_gate.py  drift_calibration.py  env_fingerprint.py  extract_eval.py  extraction_gate.py  gate.py  gradle_bench.py  history.py  ingest.py  ingest_bench.py  judge_arbitration_report.py  judge_ceiling.py  (+46 more)
scripts/jseval/regression/: __init__.py  manifest_hash_stability.py
scripts/jseval/tests/: conftest.py  test_ann_proof.py  test_artifacts.py  test_backend.py  test_baseline_shift.py  test_bench_concurrency.py  test_bisection.py  test_calibrate.py  test_cli.py  test_cohort_baselines.py  test_command_surface.py  test_common.py  test_comparability.py  test_compare.py  test_context_coverage.py  test_corpora.py  test_corpus_fetch.py  test_corpus_governance.py  test_correction_probe.py  test_counterfactual.py  (+65 more)
(+5179 files in other folders)
